--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -381,5 +381,4 @@
   font-size: 16px;
   text-align: center;
   color: rgb(77,77,77);
-  margin-top: 2%;
 }
